[gd_scene load_steps=2 format=3 uid="uid://pre_run_setup"]

[ext_resource type="Script" path="res://scripts/ui/PreRunSetup.gd" id="1"]

[node name="PreRunSetup" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = Control.PRESET_FULL_RECT
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.4)

[node name="Panel" type="Panel" parent="."]
anchors_preset = Control.PRESET_CENTER
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -340.0
offset_right = 520.0
offset_bottom = 340.0
size_flags_horizontal = Control.SIZE_SHRINK_CENTER
size_flags_vertical = Control.SIZE_SHRINK_CENTER

[node name="Root" type="VBoxContainer" parent="Panel"]
anchors_preset = Control.PRESET_FULL_RECT
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="Header" type="HBoxContainer" parent="Panel/Root"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="Title" type="Label" parent="Panel/Root/Header"]
text = "New Run — Choose Totem & Sprouts"
vertical_alignment = VERTICAL_ALIGNMENT_CENTER
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="Spacer" type="Control" parent="Panel/Root/Header"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="CloseBtn" type="Button" parent="Panel/Root/Header"]
text = "Cancel"

[node name="Tabs" type="TabContainer" parent="Panel/Root"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL
clip_tabs = false

[node name="Totem" type="VBoxContainer" parent="Panel/Root/Tabs"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL
alignment = BoxContainer.ALIGNMENT_BEGIN

[node name="Heading" type="Label" parent="Panel/Root/Tabs/Totem"]
text = "Choose a Totem"
horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Root/Tabs/Totem"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL
horizontal_scroll_mode = ScrollContainer.SCROLL_MODE_DISABLED

[node name="TotemGrid" type="HFlowContainer" parent="Panel/Root/Tabs/Totem/ScrollContainer"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="TotemFooter" type="HBoxContainer" parent="Panel/Root/Tabs/Totem"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="TotemInfo" type="Label" parent="Panel/Root/Tabs/Totem/TotemFooter"]
text = "—"
vertical_alignment = VERTICAL_ALIGNMENT_CENTER
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="TotemSpacer" type="Control" parent="Panel/Root/Tabs/Totem/TotemFooter"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="TotemConfirm" type="Button" parent="Panel/Root/Tabs/Totem/TotemFooter"]
text = "Confirm Totem"
disabled = true

[node name="Sprouts" type="VBoxContainer" parent="Panel/Root/Tabs"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="Heading" type="Label" parent="Panel/Root/Tabs/Sprouts"]
text = "Choose 4 Sprouts"
horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Root/Tabs/Sprouts"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL
horizontal_scroll_mode = ScrollContainer.SCROLL_MODE_DISABLED

[node name="SproutGrid" type="HFlowContainer" parent="Panel/Root/Tabs/Sprouts/ScrollContainer"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="SproutFooter" type="HBoxContainer" parent="Panel/Root/Tabs/Sprouts"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="SproutInfo" type="Label" parent="Panel/Root/Tabs/Sprouts/SproutFooter"]
text = "Selected: 0 / 4"
vertical_alignment = VERTICAL_ALIGNMENT_CENTER
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="SproutSpacer" type="Control" parent="Panel/Root/Tabs/Sprouts/SproutFooter"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="ClearBtn" type="Button" parent="Panel/Root/Tabs/Sprouts/SproutFooter"]
text = "Clear"

[node name="SproutConfirm" type="Button" parent="Panel/Root/Tabs/Sprouts/SproutFooter"]
text = "Confirm Sprouts"
disabled = true

[node name="Footer" type="HBoxContainer" parent="Panel/Root"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="BackBtn" type="Button" parent="Panel/Root/Footer"]
text = "Back"

[node name="FooterSpacer" type="Control" parent="Panel/Root/Footer"]
size_flags_horizontal = Control.SIZE_EXPAND_FILL

[node name="StartRunBtn" type="Button" parent="Panel/Root/Footer"]
text = "Start Run"
disabled = true

